# qbot-clean

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
dashboard/: __init__.py  render_report.py
dashboard/charts/: __init__.py  ab_v19_10_vs_v19_6.py  ab_v19_6_vs_v19_4.py  alert_center.py  daily_check_status.py  glossary.py  (+38 more)
data_cache/: phase_b_failure_modes.json
docs/: dashboard_borrow_plan.md  dashboard_stages.md  database_design_review.md  duckdb_5m_quickstart.md  duckdb_quickstart.md  duckdb_stage2_benchmark.md  factor_candidates_from_references.md  lean_architecture_review.md  lessons_learned.csv  pg_timescale_benchmark.md  quantaalpha_factor_quality_gate.md  quantaalpha_integration_plan.md  strategy_history.csv
examples/: _factor_ibs_panel.py  _factor_kline_panel.py  alphalens_factor_tear_sheet.py  backtest_backtrader.py  backtest_vectorbt.py  build_5m_hive_duckdb.py  cleanup_old_baks.py  com.claude_finance.daily_check.plist  com.claude_finance.dashboard_submit.plist  convert_baidu_to_qlib.py  convert_parquet_to_qlib.py  daily_check.sh  daily_check_cn_wrapper.sh  dashboard_submit_server.py  data_completeness_check.py  data_sanity_check.py  duckdb_hive_build.py  duckdb_init.py  duckdb_stage2_benchmark.py  factor_analysis_v17.py  factor_classic_alpha_ic.py  factor_classic_alpha_ic_hfq.py  factor_ic_fundamentals_csi300_is.py  factor_ic_ibs_csi300_is.py  factor_ic_industry_adj_ret_is.py  factor_ic_shareholders_is.py  factor_ic_super_big_net_is.py  factor_ic_technical_csi300_is.py  factor_ic_unlock_csi300_is.py  factor_ic_volume_zscore_is.py  factor_mining.py  fetch_688_missing_csi300.py  fetch_baidu_kline.py  fetch_baidu_kline_backfill_2014_2018_hfq.py  fetch_baidu_kline_v2_2021_2026.py  fetch_baidu_kline_v2_akshare.py  fetch_baidu_kline_v2_retry.py  fetch_baidu_kline_v2_retry_targeted.py  fetch_corrupt_fix_akshare.py  fetch_corrupt_fix_v3_extended.py  (+140 more)
tests/: conftest.py  test_data_completeness_check.py  test_data_sanity_check.py  test_debate_veto.py  test_dragon_tiger.py  test_factor_quality_gate.py  test_fetch_baidu_kline_merge.py  test_forward_oos_monitor.py  test_fundamentals.py  test_indicators.py  test_margin_cache.py  test_merge_user_input.py  test_ml_strategies.py  test_monte_carlo.py  test_phase_b_gate.py  test_portfolio_excel_forward_oos.py  test_risk_gates.py  test_scan_cache.py  test_signal_strategies.py  test_static_leak_check.py  test_strategies.py  test_tdx_parser.py  test_trades_log.py  test_trading_costs.py  test_unlock.py
tools/: static_leak_check.py
(+72 files in other folders)
