[project]
name = "claude-finance"
version = "0.1.0"
description = "Quant research scaffold: vectorbt + backtrader with akshare/tushare data sources"
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26,<2.0",
    "python-dotenv>=1.0",
    "akshare>=1.13",
    "tushare>=1.4",
    "vectorbt>=0.26",
    "backtrader>=1.9.78",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]
# Heavy ML deps for strategies/ml/* and risk/monte_carlo
# Install with:  uv pip install -e ".[ml]"
ml = [
    "torch>=2.2",
    "lightgbm>=4.3",
    "scikit-learn>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_finance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
